noinst_LTLIBRARIES = libtinyxml.la

tinyxmlincdir = $(top_srcdir)/External/tinyxml

tinyxmlinc_HEADERS= $(top_srcdir)/External/tinyxml/*.h

INCLUDES = -I$(top_srcdir)

libtinyxml_la_SOURCES =\
					   tinystr.cpp									\
					   tinyxml.cpp									\
					   tinyxmlparser.cpp								\
					   tinyxmlerror.cpp

